# self_healing

./: LICENSE  README.md  pyproject.toml  setup.py
self_healing/: __init__.py  core.py  patcher.py  runner.py
self_healing.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
self_healing/data/: __init__.py  detail.py  fixes.py  functions.py  values.py
