[tool.poetry]
name = "self_healing"
version = "0.1.0"
description = "A Python library for cryptocurrency analysis."
authors = ["Arsam <ashouriarsamold@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
prompt_toolkit = "^3.0.48"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^21.9b0"
