[tool.poetry]
name = "self_healing"
version = "0.1.2"
description = "The Self-Healing Library is a Python tool that dynamically runs and patches code to recover from runtime errors using installed data."
authors = ["Arsam <ashouriarsamold@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
prompt_toolkit = "^3.0.48"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^21.9b0"
